--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ pre_features_sn_2_gap_1.csv
 psms.txt
 test.py
 __pycache__/utils.cpython-37.pyc
+FTLD_Batch2_F50_Features_SN0_Gap3_3ppm.pickle
+FTLD_Batch2_F50_MS1_to_Features.pickle
+FTLD_Batch2_F50_MS1_to_Features.txt
+psms_category.txt
+__pycache__/featureDetection.cpython-37.pyc
