top-down and bottom-up are both implemented and tested for a mzXML file

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ FTLD_Batch2_F50_MS1_to_Features.txt
 psms_category.txt
 __pycache__/featureDetection.cpython-37.pyc
 psms_test.txt
+FTLD_Batch2_F50_BottomUp_RT_assignment.txt
+FTLD_Batch2_F50_TopDown_RT_assignment.txt
