RTassignment is revised to handle multiple mzXML files and connect it to RTalignment RTalignment is generated to align RTs across multiple runs (and to be used for assigning RT to each PSM)

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,12 @@ psms_test.txt
 FTLD_Batch2_F50_BottomUp_RT_assignment.txt
 FTLD_Batch2_F50_TopDown_RT_assignment.txt
 __pycache__/RTassignment.cpython-37.pyc
+df_key_run_RT.pickle
+dict_pep_charge_rt.pickle
+profile_RTassignment.txt
+rtAlignment.txt
+rtAlignment_modeling.txt
+rtAlignment_result.txt
+rtAlignment_tested.txt
+RTassignment
+test.txt
